# version

./: CMakeLists.txt  COPYING  LICENSE  README.md  main.cpp  makeversion.sh  version.h
.github/workflows/: main.yml  write_file.yml
